Fixed margins on mobile jpgs

--- a/css/600.css
+++ b/css/600.css
@@ -59,6 +59,7 @@ header img {
             
 .span_1_of_3 img {
     width: 80%;
+    margin: 0 5% 0 5%;
     height: 50%;
 
 }    
